# kionix-driver-demo

./: CMakeLists.txt  Kconfig  README.md  prj.conf  readme-branches.md  west.yml
boards/: lpcxpresso55s69_cpu0.overlay  nrf9160dk_nrf9160ns.overlay  sparkfun_thing_plus_nrf9160.overlay  sparkfun_thing_plus_nrf9160_common_kionix_demo.overlay  sparkfun_thing_plus_nrf9160ns.overlay
docs/: memory-use.txt
docs/notes/: manually-select-latest-from-d59cb3f2a441.txt
samples/: comment-block.txt
samples/kionix-demo-minimal/: CMakeLists.txt  Kconfig  README.rst  prj.conf  west.yml
samples/kionix-demo-minimal/boards/: lpcxpresso55s69_cpu0.overlay  sparkfun_thing_plus_nrf9160_common_kionix_demo.overlay
samples/kionix-demo-minimal/src/: main.c
samples/kionix-trigger-work/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/kionix-trigger-work/boards/: lpcxpresso55s69_cpu0.overlay
samples/kionix-trigger-work/src/: int-gpio-inst.h  main.c  main.h
src/: banner.c  banner.h  cli-iis2dh-sensor.c  cli-zephyr-kernel-timing.c  cli-zephyr-kernel-timing.h  cli-zephyr-stack-info.c  cli-zephyr-stack-info.h  common.h  conversions.c  conversions.h  development-flags.h  diagnostic.c  diagnostic.h  iis2dh-registers.h  kd-app-config.h  kionix-demo-errors.h  main.c  main.h  module-ids.h  return-values.h  routine-options.h  scoreboard.c  scoreboard.h  thread-iis2dh.c  thread-iis2dh.h  thread-led.c  thread-led.h  thread-lis2dh.h  thread-simple-cli.c  thread-simple-cli.h  thread_iis2dh.c  thread_iis2dh.h  thread_lis2dh.c  thread_lis2dh.h  thread_simple_cli.c  thread_simple_cli.h  version.h
